# topo_gen

./: .gitignore  README.md  pyproject.toml  torus_10x10_config.yaml
docs/: CLAB_CONFIG.md  NIX_GUIDE.md  QUICKSTART.md  README.md  TOPOLOGY_CONFIG.md  monitoring.md
examples/: README.md
scripts/: README.md  analyze_ospf6_spf.sh  apply_ospf6_debug.sh
src/topo_gen/: __init__.py  __main__.py  cli.py  cli_special.py  engine.py  filesystem.py  links.py
src/topo_gen/config/: defaults.py  settings.py
src/topo_gen/core/: __init__.py  models.py  models_old.py  types.py
src/topo_gen/core/models/: __init__.py  base.py  generation.py  network.py  router.py  topology.py  validators.py
src/topo_gen/core/models/protocols/: __init__.py  bfd.py  bgp.py  isis.py  ospf.py
src/topo_gen/generators/: __init__.py  config.py  renderer.py  templates.py
src/topo_gen/generators/templates/: bfdd.conf.j2  bgpd.conf.j2  daemons.j2  isisd.conf.j2  mgmtd.conf.j2  ospf6d.conf.j2  staticd.conf.j2  vtysh.conf.j2  zebra.conf.j2
src/topo_gen/topology/: __init__.py  base.py  grid.py  special.py  strategies.py  strip.py  torus.py
src/topo_gen/utils/: __init__.py  direction.py  functional.py  logging.py  topo.py
tools/: README.md  monitor_resources.sh  plot_resources.py
